--- a/ramdisk/init.reviver.rc
+++ b/ramdisk/init.reviver.rc
@@ -23,10 +23,20 @@ on property:sys.boot_completed=1
 	chown system system /sys/class/kgsl/kgsl-3d0/devfreq/governor
 	chmod 0664 /sys/class/kgsl/kgsl-3d0/devfreq/governor
 
-	# Enable core control
+	# set cpu max/min frequencies
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq 1516800
+	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq 499200
+	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_max_freq 1209600
+	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_min_freq 403200
+
+	# core control
 	write /sys/devices/system/cpu/cpu0/core_ctl/min_cpus 1
 	write /sys/devices/system/cpu/cpu0/core_ctl/max_cpus 4
 	write /sys/devices/system/cpu/cpu0/core_ctl/busy_up_thres 32
 	write /sys/devices/system/cpu/cpu0/core_ctl/busy_down_thres 18
 	write /sys/devices/system/cpu/cpu0/core_ctl/offline_delay_ms 100
 	write /sys/devices/system/cpu/cpu0/core_ctl/is_big_cluster 1
+
+	# Input boost config
+	write /sys/module/cpu_boost/parameters/input_boost_freq "0:1094400 4:998400"
+	write /sys/module/cpu_boost/parameters/input_boost_ms 500
