--- a/ramdisk/init.spectrum.rc
+++ b/ramdisk/init.spectrum.rc
@@ -78,14 +78,14 @@ on property:persist.spectrum.profile=1
 
 # Battery
 on property:persist.spectrum.profile=2
-	# big cluster
+	# big cluster 
 	write /sys/devices/system/cpu/cpu0/online 1
 	write /sys/devices/system/cpu/cpu0/cpufreq/scaling_governor powersave
 	# LITTLE cluster
 	write /sys/devices/system/cpu/cpu4/online 1
 	write /sys/devices/system/cpu/cpu4/cpufreq/scaling_governor powersave
 	# GPU
-	write /sys/class/kgsl/kgsl-3d0/devfreq/governor powersave
+	write /sys/class/kgsl/kgsl-3d0/devfreq/governor msm-adreno-tz
 
 # Gaming
 on property:persist.spectrum.profile=3
